--- a/giftlink-frontend/package.json
+++ b/giftlink-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "giftlink-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
